--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DATABASE_URL=https://projectbisonbackend.onrender.com
+REACT_APP_DATABASE_URL=http://localhost:4000
 API_KEY=project_4_backendapi
 DEBUG=true
